work on look and feel and functionality, add support for mms uploads

--- a/ucp/assets/less/bootstrap.less
+++ b/ucp/assets/less/bootstrap.less
@@ -89,3 +89,21 @@
 		}
 	}
 }
+
+#messages-container {
+	.message-box {
+		.window.hover {
+			opacity: 0.5;
+		}
+		.response-status {
+			.progress {
+				position: relative;
+				margin-left: 3px;
+				margin-right: 3px;
+				top: 3px;
+				height: 7px;
+				margin-bottom: 0px;
+			}
+		}
+	}
+}
